--- a/src/assets/arco.css
+++ b/src/assets/arco.css
@@ -9764,13 +9764,6 @@ body[arco-theme='dark'] .arco-carousel-indicator-outer .arco-carousel-indicator-
 .arco-list-bordered {
   border: 1px solid var(--color-neutral-3);
 }
-.arco-list-split .arco-list-header,
-.arco-list-split .arco-list-item:not(:last-child) {
-  border-bottom: 1px solid var(--color-neutral-3);
-}
-.arco-list-split .arco-list-footer {
-  border-top: 1px solid var(--color-neutral-3);
-}
 .arco-list-header {
   color: var(--color-text-1);
   font-weight: 500;
@@ -9831,7 +9824,7 @@ body[arco-theme='dark'] .arco-carousel-indicator-outer .arco-carousel-indicator-
 }
 .arco-list-pagination {
   float: right;
-  margin-top: 24px;
+  padding-top: 8px;
 }
 .arco-list-pagination::after {
   display: block;
